[gd_scene load_steps=6 format=3 uid="uid://dlme03jybalhe"]

[ext_resource type="Texture2D" uid="uid://bshca5xhg1sfa" path="res://sprites/Items.png" id="1_6v414"]
[ext_resource type="Script" uid="uid://d1did8qucvlfh" path="res://Scripts/pickaxe.gd" id="2_l6hle"]
[ext_resource type="Texture2D" uid="uid://bht15p5ev4ihf" path="res://sprites/Item popup.png" id="3_hfcf5"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_hfcf5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hfcf5"]
size = Vector2(3.4375, 10.1328)

[node name="Pickaxe" type="RigidBody2D"]
physics_material_override = SubResource("PhysicsMaterial_hfcf5")
gravity_scale = 0.086
script = ExtResource("2_l6hle")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.0664063)
shape = SubResource("RectangleShape2D_hfcf5")
one_way_collision = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -0.132813)
shape = SubResource("RectangleShape2D_hfcf5")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ItemPopup" type="Sprite2D" parent="CanvasLayer"]
texture = ExtResource("3_hfcf5")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_6v414")
region_rect = Rect2(0, 0, 8.01223, 8)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
